--- a/Projects/HadiBilet/HadiBilet/Resources/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Projects/HadiBilet/HadiBilet/Resources/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -30,7 +30,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemMintColor"/>
+                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
                             <constraint firstItem="9gT-aP-rbP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2J8-8i-TIB"/>
                             <constraint firstItem="A6F-l1-ahf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="169" id="Nbb-cL-dB3"/>
@@ -47,8 +47,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemMintColor">
-            <color red="0.0" green="0.78039215689999997" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray5Color">
+            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
