--- a/Projects/HadiBilet/HadiBilet/Views/CityFieldView.xib
+++ b/Projects/HadiBilet/HadiBilet/Views/CityFieldView.xib
@@ -20,26 +20,26 @@
             <rect key="frame" x="0.0" y="0.0" width="373" height="126"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vwq-Nb-sjD">
+                <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Vwq-Nb-sjD">
                     <rect key="frame" x="0.0" y="0.0" width="373" height="126"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DKP-K3-RvF">
+                        <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DKP-K3-RvF">
                             <rect key="frame" x="1" y="1" width="371" height="124"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vm9-Ni-PEO">
-                                    <rect key="frame" x="0.0" y="-1.3333333333333357" width="34.666666666666664" height="125.33333333333334"/>
+                                    <rect key="frame" x="0.0" y="-1.3333333333333357" width="46.333333333333336" height="125.33333333333334"/>
                                 </imageView>
                                 <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="ONd-VF-kce">
-                                    <rect key="frame" x="54.666666666666657" y="0.0" width="316.33333333333337" height="124"/>
+                                    <rect key="frame" x="66.333333333333343" y="0.0" width="304.66666666666663" height="124"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lütfen Seçin" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqz-0T-0gm">
-                                            <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="36"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nereden" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqz-0T-0gm">
+                                            <rect key="frame" x="0.0" y="0.0" width="304.66666666666669" height="36"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nereden" adjustsFontForContentSizeCategory="YES" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nzf-DX-oqV">
-                                            <rect key="frame" x="0.0" y="38" width="316.33333333333331" height="86"/>
+                                        <textField opaque="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Şehir" adjustsFontForContentSizeCategory="YES" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nzf-DX-oqV">
+                                            <rect key="frame" x="0.0" y="38" width="304.66666666666669" height="86"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
